single spa test first commit

--- a/sample-app/Dockerfile
+++ b/sample-app/Dockerfile
@@ -6,10 +6,6 @@ RUN npm install
 COPY . .
 ENV VUE_APP_API_URL http://localhost:8080
 ENV VUE_APP_API_ENDPOINT /test
-RUN npm run build
 
 # production stage
-FROM nginx:stable-alpine as production-stage
-COPY --from=build-stage /app/dist /usr/share/nginx/html
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["npm", "run", "serve"]
