--- a/environment/docker-compose.yml
+++ b/environment/docker-compose.yml
@@ -1,10 +1,15 @@
 version: '3'
 services:
+  single-spa:
+    build: ../sample-single-spa
+    image: single-spa
+    ports:
+      - "5001:5000"
   sample-app:
     build: ../sample-app
     image: sample-app
     ports:
-      - "5000:80"
+      - "5000:8082"
   sample-api:
     build: ../sample-api
     image: sample-api
