--- a/sample-app/package.json
+++ b/sample-app/package.json
@@ -11,7 +11,8 @@
     "core-js": "^2.6.5",
     "single-spa-vue": "^1.5.2",
     "systemjs-webpack-interop": "^1.1.0",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
