--- a/sample-app/package.json
+++ b/sample-app/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
-    "single-spa-vue": "^1.5.2",
-    "systemjs-webpack-interop": "^1.1.0",
+    "single-spa": "^4.4.1",
+    "single-spa-vue": "^1.5.4",
+    "systemjs": "^6.1.4",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   },
