vue and react stable

--- a/sample-app2/.babelrc
+++ b/sample-app2/.babelrc
@@ -1,11 +1,3 @@
 {
-  "presets": [
-    ["env", {
-      "targets": {
-        "browsers": ["last 2 versions"]
-      }
-    }],
-    "react",
-    "stage-0"
-  ]
+  "presets": ["@babel/preset-env", "@babel/preset-react"]
 }
