--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,12 @@ typings/
 
 # next.js build output
 .next
+
+/sample-api/node_modules
+/sample-app/node_modules
+/sample-single-spa/node_modules
+/sample-single-spa/dist
+/sample-app/dist
+sample-app/package-lock.json
+sample-api/package-lock.json
+sample-single-spa/package-lock.json
