parcel-vue test

--- a/sample-vue-parcel/package.json
+++ b/sample-vue-parcel/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --port 8081",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -13,8 +13,7 @@
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.3.2",
     "single-spa-vue": "^1.5.4",
-    "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue": "^2.6.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
