--- a/sample-react/package.json
+++ b/sample-react/package.json
@@ -29,8 +29,6 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "single-spa": "^4.4.1",
-    "single-spa-react": "^2.10.4",
-    "systemjs": "6.1.1",
-    "webpack-external-import": "^0.2.5"
+    "single-spa-react": "^2.10.4"
   }
 }
