--- a/sample-react/Dockerfile
+++ b/sample-react/Dockerfile
@@ -5,8 +5,11 @@ ENV PATH /react/node_modules/.bin:$PATH
 COPY package.json /react/package.json
 RUN npm install --silent
 COPY . /react
-ENV API_URL http://localhost:8081
-ENV API_ENDPOINT /test
+
+RUN rm -v /react/.env
+COPY .env.docker /react/.env
+ENV REACT_APP_API_URL http://localhost:8081
+ENV REACT_APP_API_ENDPOINT /test
 RUN npm run build
 
 # production environment
