--- a/sample-vue/package.json
+++ b/sample-vue/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.3.2",
+    "single-spa": "^4.4.1",
     "single-spa-vue": "^1.5.4",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
