--- a/sample-vue-parcel/package.json
+++ b/sample-vue-parcel/package.json
@@ -12,8 +12,7 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.3.2",
-    "single-spa-vue": "^1.5.4",
-    "vue": "^2.6.10"
+    "single-spa-vue": "^1.5.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
